fixes the issue where the entire background moves and the navbar shifts upon reloading

--- a/client/app/components/layouts/home.css
+++ b/client/app/components/layouts/home.css
@@ -1,13 +1,13 @@
 /* HomeTest/HomeTest.css */
 
-body, .homeTest {
+/* body, .homeTest {
   margin: 0;
   padding: 0;
   font-family: 'Nunito', sans-serif;
   background: url('/bb7.jpg') no-repeat center center; 
   background-size: cover; 
   background-attachment: fixed;
-}
+} */
 
 
 .hero-section {
